# pySLM2

./: .buildinfo  .gitignore  .travis.yml  CONTRIBUTING.md  Intro.html  LICENSE.txt  README.html  README.md  algorithm.html  circle.yml  contributing.html  contributing_link.html  contributor.html  controller.html  examples.html  fourier-hologram.html  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pySLM2.html  pySLM2.util.html  pyproject.toml  readme_link.html  requirement.txt  requirements.html  search.html  searchindex.js  setup.py  temp  try.py
.github/workflows/: pytest.yml  (+2 more)
_modules/: index.html
_sources/: algorithm.md.txt  contributing.md.txt  examples.rst.txt  index.rst.txt  pySLM2.rst.txt  requirements.txt
doc/: Makefile  make.bat
docs/: Makefile  README.md  algorithm.md  algorithm.rst  conf.py  contributing.md  contributing_link.rst  examples.rst  index.rst  md_alg.md  pySLM2.rst  pySLM2.util.rst  readme_link.rst  requirements.txt
examples/: DMD Hologram simulation-Copy1.ipynb  aberration_correction.py  create_donut_beam.py  create_gaussian_11_lcos_slm_gs.py  create_gaussian_11_lcos_slm_mraf.py  create_gaussian_11_lcos_slom.py  create_gaussian_beam.py  create_multiple_gaussian_beam.py  load_images_luxbeam.py
pySLM2/: __init__.py  _backend.py  _lib.py  analysis.py  lib.py  profile.py  simulation.py  slm.py  version.py  window.py
runtime_benchmark/: README.md  runtime_ifta.py  slm_hologram_gs.py
test/: conftest.py  test_analysis.py  test_backend.py  test_profile.py  test_simulation.py  test_slm.py  test_util.py
(+37 files in other folders)
